# mdtxt

./: CHANGELOG.md  README.md  index.html  mdtxt_CODEX_REFACTOR_STEPS_V0.1.0.md  mdtxt_PRODUCT_REQUIREMENTS_V0.1.0_FINAL.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts  wdio.native.conf.mjs
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  deploy-docs.yml  installed-package-evidence.yml  platform-evidence.yml  release.yml  test-build.yml
docs/: PRIVACY.md  RELEASE_PROCESS.md  astro.config.mjs  package.json
docs/adr/: 0001-mdtxt-product-identity.md  0002-document-session.md
docs/audits/: baseline-0.1.0.md  p1-safety-contracts-0.1.0.md  p10a-platform-evidence.md  p11-release-candidate.md  p3-i18n-contracts-0.1.0.md  p6-live-beta-tracking.md  p7-live-widgets.md  p8-file-safety-tracking.md  p9-ai-export-platform.md  ui-a3-acceptance.md
docs/src/components/: AIShowcase.astro  AppWindow.astro  Download.astro  EditorShowcase.astro  Faq.astro  Footer.astro  Hero.astro  Nav.astro  OpenSource.astro  PowerFeatures.astro  Stats.astro  Themes.astro
docs/src/layouts/: Base.astro
docs/src/pages/: 404.astro  guide.astro  index.astro
docs/src/scripts/: motion.ts
docs/src/styles/: global.css
docs/testing/: p1-safety-checklist.md  p6-live-beta-ime-checklist.md  p8-file-system-matrix.md
e2e/native/: app.e2e.mjs
packaging/: README.md
scripts/: benchmark-live-editor.ts  check-product-identity.mjs  check-security-boundaries.mjs  check-user-copy.mjs  linux-installed-recovery.mjs  linux-native-ime.mjs  release-preflight.mjs  watch-webview2-devtools.ps1  windows-capture-screen.ps1  windows-enable-pinyin.ps1  windows-installed-recovery.mjs  windows-native-smoke.mjs  windows-send-input.ps1  windows-uia-invoke.ps1  windows-uia-wait.ps1  write-platform-evidence-manifest.mjs
src/: App.tsx  fonts.ts  index.css  main.tsx
src-tauri/: Cargo.toml  linux-desktop.template  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  lib.rs  main.rs  pdf.rs  recovery.rs
src/assets/: tutorial.md  tutorial.zh-CN.md
src/components/: AIBubble.tsx  AIPanel.tsx  CodeEditor.test.tsx  CodeEditor.tsx  ErrorBoundary.tsx  ExportMenu.tsx  FileConflictDialog.test.tsx  FileConflictDialog.tsx  FileExplorer.tsx  FindReplaceBar.test.tsx  FindReplaceBar.tsx  FormatToolbar.tsx  GlobalSearch.tsx  MarkdownPreview.test.tsx  MarkdownPreview.tsx  MascotIdle.tsx  MermaidBlock.tsx  ModeToggle.test.tsx  ModeToggle.tsx  PreviewFindBar.tsx  RecoveryDialog.test.tsx  RecoveryDialog.tsx  SettingsMenu.tsx  SettingsModal.tsx  ShortcutCheatsheet.tsx  SlashMenu.tsx  SplitDivider.tsx  StatsDialog.tsx  StatusBar.tsx  TabBar.test.tsx  TabBar.tsx  TableOfContents.tsx  TitleBar.tsx  Toast.tsx  Tour.tsx  UnsavedChangesDialog.tsx  UpdateDialog.tsx  WelcomeScreen.tsx
src/context/: LocaleContext.test.ts  LocaleContext.tsx  LocaleProvider.test.tsx  ThemeContext.test.tsx  ThemeContext.tsx
src/editor/bridge/: useEditorViewportBridge.ts
src/editor/core/: editorPresentation.test.ts  editorPresentation.ts  useCodeMirrorHost.test.ts  useCodeMirrorHost.ts  useEditorController.ts  useEditorDocumentSession.test.tsx  useEditorDocumentSession.ts
src/editor/extensions/: useEditorPreferences.ts
src/editor/interactions/: EditorOverlays.tsx  ReviewBanner.tsx  editorPaste.ts  useAIAssistShortcut.ts  useEditorReview.ts  useWikilinkCompletion.ts
src/editor/live/: editFocusResolver.test.ts  editFocusResolver.ts  liveCalloutWidgets.ts  liveCodeWidgets.ts  liveEligibility.test.ts  liveEligibility.ts  liveFootnoteWidgets.ts  liveFrontmatterWidgets.ts  liveImageWidgets.ts  liveLocale.ts  liveMarkdownPresentation.test.ts  liveMarkdownPresentation.ts  liveMathWidgets.ts  liveMermaidWidgets.ts  liveTableWidgets.ts
src/hooks/: useAutosave.test.ts  useAutosave.ts  useDocumentPresentationSnapshot.test.ts  useDocumentPresentationSnapshot.ts  useExternalChangeWatcher.test.ts  useExternalChangeWatcher.ts  useGlobalShortcuts.test.tsx  useGlobalShortcuts.ts
src/test/: editorStateIsolation.test.ts  liveBetaRoundTrip.test.ts  markdownFixtures.test.ts
src/test/fixtures/: largeMarkdown.ts
src/test/fixtures/markdown/: gfm-safety.md  live-beta.md  mixed-language.md  unknown-and-html.md
src/utils/: aiAssist.ts  aiChat.test.ts  aiChat.ts  aiErrors.test.ts  aiErrors.ts  bundleIntegrity.test.ts  documentEditorStateStore.test.ts  documentEditorStateStore.ts  documentSession.test.ts  documentSession.ts  documentSessionController.test.ts  documentSessionController.ts  documentStats.ts  docxExport.ts  exportUtils.test.ts  exportUtils.ts  findReplace.test.ts  findReplace.ts  frontmatter.ts  localImage.test.ts  localImage.ts  mermaidRenderer.ts  minimalTextChange.test.ts  minimalTextChange.ts  persistence.test.ts  persistence.ts  recoveryModel.test.ts  recoveryModel.ts  tabsModel.test.ts  tabsModel.ts
