[package]
name = "paperling"
version = "1.0.37"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "paperling_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
# Forward a double-clicked file to the running instance instead of spawning a
# second app (and racing it for the session-restore state).
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs"] }
# OS keychain for the AI API key (SECURITY-01). Pure-Rust backends: Windows
# Credential Manager, macOS Keychain, and Linux Secret Service (zbus + crypto-rust,
# no system C libs needed at build time).
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
# Dev-tooling bridge for UI automation (screenshots, DOM inspection) from
# Claude Code's Tauri MCP server. Registered only in debug builds (lib.rs),
# so release binaries never start its WebSocket server.
tauri-plugin-mcp-bridge = "0.11"

# Auto-update from GitHub Releases (latest.json) + relaunch after install.
# Desktop-only: the updater has no mobile implementation.
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Silent "Save as PDF" export: render the document in a hidden WebView2 and call
# its native PrintToPdf (no OS print dialog). Versions track what wry/tauri
# already resolve so we don't pull a second copy of the Windows bindings.
[target."cfg(windows)".dependencies]
webview2-com = "0.38"
windows = "0.61"
